AB#55 code clean up